--- a/trunk/ambiance-components-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/trunk/ambiance-components-archetype/src/main/resources/archetype-resources/pom.xml
@@ -18,4 +18,17 @@
     <url>http://ambiance.googlecode.com/svn/trunk/${artifactId}/</url>
   <scm>
 
+  <repositories>
+    <repository>
+      <id>Ambiance Snapshots</id>
+      <url>http://laurent.granie.free.fr/ambiance/ambiance-snapshot-repository</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+    </repository>
+  </repositories>
+
 </project>
