--- a/ambiance-musicbrainz/pom.xml
+++ b/ambiance-musicbrainz/pom.xml
@@ -55,7 +55,7 @@
     <dependency>
       <groupId>org.musicbrainz</groupId>
       <artifactId>jmb-wsc</artifactId>
-      <version>beta1</version>
+      <version>1-0-0beta2</version>
     </dependency>
   </dependencies>
 
