--- a/ambiance-feed/pom.xml
+++ b/ambiance-feed/pom.xml
@@ -13,6 +13,11 @@
   <artifactId>ambiance-feed</artifactId>
   <version>1.0-SNAPSHOT</version>
   <description></description>
+  
+  <scm>
+    <connection>scm:svn:http://ambiance.googlecode.com/svn/trunk/ambiance-feed</connection>
+    <url>http://ambiance.googlecode.com/svn/trunk/ambiance-feed/</url>
+  </scm>
 
   <repositories>
     <repository>
