--- a/ambiance-components-archetype/pom.xml
+++ b/ambiance-components-archetype/pom.xml
@@ -12,6 +12,11 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
+  <scm>
+    <connection>scm:svn:http://ambiance.googlecode.com/svn/trunk/ambiance-components-archetype</connection>
+    <url>http://ambiance.googlecode.com/svn/trunk/ambiance-components-archetype/</url>
+  <scm>
+
   <distributionManagement>
 	<snapshotRepository>
       <id>ftp-repository</id>
