--- a/ambiance-components-archetype/src/main/resources/archetype-resources/pom.xml
+++ b/ambiance-components-archetype/src/main/resources/archetype-resources/pom.xml
@@ -16,7 +16,7 @@
   <scm>
     <connection>scm:svn:http://ambiance.googlecode.com/svn/trunk/${artifactId}</connection>
     <url>http://ambiance.googlecode.com/svn/trunk/${artifactId}/</url>
-  <scm>
+  </scm>
 
   <repositories>
     <repository>
