--- a/ambiance-azureus/pom.xml
+++ b/ambiance-azureus/pom.xml
@@ -56,4 +56,11 @@
       <artifactId>azureus</artifactId>
       <version>3.0.1.6</version>
     </dependency>
+    
+    <dependency>
+      <groupId>ambiance</groupId>
+      <artifactId>ambiance-azureus-ruler</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 </project>
