--- a/ambiance-azureus/pom.xml
+++ b/ambiance-azureus/pom.xml
@@ -46,12 +46,6 @@
 
   <dependencies>
     <dependency>
-      <groupId>ambiance</groupId>
-      <artifactId>ambiance-transporter</artifactId>
-      <version>1.0-SNAPSHOT</version>
-    </dependency>
-    
-    <dependency>
       <groupId>azureus</groupId>
       <artifactId>azureus</artifactId>
       <version>3.0.1.6</version>
@@ -59,7 +53,13 @@
     
     <dependency>
       <groupId>ambiance</groupId>
-      <artifactId>ambiance-azureus-ruler</artifactId>
+      <artifactId>ambiance-transporter</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>ambiance</groupId>
+      <artifactId>ambiance-chain</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
