--- a/trunk/ambiance-audio-player/pom.xml
+++ b/trunk/ambiance-audio-player/pom.xml
@@ -53,5 +53,11 @@
       <artifactId>basicplayer</artifactId>
       <version>3.0</version>
     </dependency>
+    
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
 </project>
