--- a/ambiance-audio-player/pom.xml
+++ b/ambiance-audio-player/pom.xml
@@ -59,5 +59,11 @@
       <artifactId>commons-logging</artifactId>
       <version>1.1</version>
     </dependency>
+    
+    <dependency>
+      <groupId>ambiance</groupId>
+      <artifactId>ambiance-transporter</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
