--- a/trunk/ambiance-iserver-swing/pom.xml
+++ b/trunk/ambiance-iserver-swing/pom.xml
@@ -30,5 +30,18 @@
       </releases>
     </repository>
   </repositories>
-
+  
+  <dependencies>
+    <dependency>
+      <groupId>ambiance</groupId>
+      <artifactId>ambiance-iserver-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>ambiance</groupId>
+      <artifactId>ambiance-transporter</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+  </dependencies>
 </project>
