--- a/ambiance-application/pom.xml
+++ b/ambiance-application/pom.xml
@@ -9,7 +9,7 @@
   
   <groupId>ambiance</groupId>
   <artifactId>ambiance-application</artifactId>
-  <packaging>jar</packaging>
+  <packaging>plexus-application</packaging>
   <version>1.0-SNAPSHOT</version>
   <description></description>
 
@@ -59,6 +59,31 @@
           <applicationName>Ambiance</applicationName>
           <applicationConfiguration>src/conf/application.xml</applicationConfiguration>
           <configurationProperties>src/plexus.properties</configurationProperties>
+        </configuration>
+      </plugin>
+      
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>appassembler-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>assemble</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <assembleDirectory>target/ambiance</assembleDirectory>
+          <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
+          <programs>
+            <program>
+              <name>ambiance</name>
+              <mainClass>
+                org.ambiance.Main
+              </mainClass>
+            </program>
+          </programs>
         </configuration>
       </plugin>
     </plugins>
