--- a/trunk/ambiance-persistence/pom.xml
+++ b/trunk/ambiance-persistence/pom.xml
@@ -20,6 +20,21 @@
     <url>http://ambiance.googlecode.com/svn/trunk/ambiance-persistence/</url>
   </scm>
 
+  <build>
+    <defaultGoal>compile</defaultGoal>
+
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.5</source>
+          <target>1.5</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>hsqldb</groupId> 
