--- a/ambiance-persistence/pom.xml
+++ b/ambiance-persistence/pom.xml
@@ -39,7 +39,8 @@
     <dependency>
       <groupId>hsqldb</groupId> 
       <artifactId>hsqldb</artifactId> 
-      <version>1.8.0.7</version> 
+      <version>1.8.0.7</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
