--- a/trunk/ambiance-flikr-services/pom.xml
+++ b/trunk/ambiance-flikr-services/pom.xml
@@ -14,6 +14,21 @@
   <version>1.0-SNAPSHOT</version>
   <description></description>
   
+  <repositories>
+    <repository>
+      <id>Ambiance Third Part</id>
+      <url>
+        http://laurent.granie.free.fr/ambiance/ambiance-thirdpart-repository
+      </url>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
+  
   <dependencies>
     <dependency>
       <groupId>ambiance</groupId>
