--- a/ambiance-components/pom.xml
+++ b/ambiance-components/pom.xml
@@ -86,6 +86,7 @@
       <plugin>
         <groupId>org.codehaus.plexus</groupId>
         <artifactId>plexus-maven-plugin</artifactId>
+        <version>1.3.6-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
