--- a/trunk/ambiance-desktop/pom.xml
+++ b/trunk/ambiance-desktop/pom.xml
@@ -172,8 +172,8 @@
     </dependency>
     
     <dependency>
-      <groupId>org.jdesktop</groupId>
-      <artifactId>TimingFramework</artifactId>
+      <groupId>net.java.dev.timingframework</groupId>
+      <artifactId>timingframework</artifactId>
       <version>1.0</version>
     </dependency>
     
