--- a/miage/ILOO - TP1/pom.xml
+++ b/miage/ILOO - TP1/pom.xml
@@ -20,6 +20,12 @@
       <artifactId>guice</artifactId>
       <version>2.0</version>
     </dependency>
+        
+    <dependency>
+      <groupId>net.fortuna</groupId>
+      <artifactId>ical4j</artifactId>
+      <version>1.0-beta4</version>
+    </dependency>
   </dependencies>  
 
 </project>
