--- a/ambiance-components/pom.xml
+++ b/ambiance-components/pom.xml
@@ -35,17 +35,6 @@
 
   <repositories>
     <repository>
-      <id>Codehaus Snapshots</id>
-      <url>http://snapshots.repository.codehaus.org/</url>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-    </repository>
-    
-    <repository>
       <id>Ambiance Snapshots</id>
       <url>http://laurent.granie.free.fr/ambiance/ambiance-snapshot-repository</url>
       <snapshots>
@@ -102,6 +91,14 @@
         <version>1.6</version>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <tagBase>https://ambiance.googlecode.com/svn/tags/</tagBase>
+        </configuration>
+      </plugin>
+
       <!-- Eclipse plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -109,14 +106,6 @@
         <version>2.8</version>
         <configuration>
           <useProjectReferences>true</useProjectReferences>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-release-plugin</artifactId>
-        <configuration>
-          <tagBase>https://ambiance.googlecode.com/svn/tags/</tagBase>
         </configuration>
       </plugin>
 
@@ -145,5 +134,13 @@
       </plugin>
     </plugins>
   </reporting>
+  
+  <dependencies>
+    <dependency>
+      <groupId>org.codehaus.plexus</groupId>
+      <artifactId>plexus-container-default</artifactId>
+      <version>1.5.5</version>
+    </dependency>
+  </dependencies>
   
 </project>
